<resources>
    <string name="scene_app_name">场景创建</string>
    <string name="scene_menu_preview_label">预览模式</string>
    <string name="scene_menu_edit_label">编辑模式</string>
    <string name="scene_menu_add_room_label">添加房间</string>
    <string name="scene_menu_replace_bg_label">更换背景</string>
    <string name="scene_menu_clear_label">清空界面</string>
    <string name="scene_menu_bottom_opt_panel">底部操作栏</string>
    <string name="scene_select_btn">确认</string>
    <string name="scene_select_cal">取消</string>
    <string name="scene_colors">颜色选择</string>
    <string name="scene_width_label">宽：</string>
    <string name="scene_height_label">高：</string>
    <string name="scene_x_label">X：</string>
    <string name="scene_y_label">Y：</string>
    <string name="scene_room_name_hint">房间名称</string>
    <string name="scene_room_desc_hint">房间描述</string>
    <string name="scene_room_seat_count_hint">房间座位数量</string>
    <string name="scene_seat_name_hint">座位名称</string>
    <string name="scene_seat_desc_hint">座位描述</string>
    <string name="scene_seat_msg_hint">座位留言</string>
    <string name="scene_org_edit_label">编辑</string>
    <string name="scene_org_delete_label">删除</string>
    <string name="scene_child_add_label">添加子项</string>
    <string name="scene_child_multi_add_label">批量添加</string>
    <string name="scene_org_name_hint">机构名称</string>
    <string name="scene_org_desc_hint">机构描述</string>
    <string name="scene_org_location_label">机构位置：</string>
    <string name="scene_status_label">座位状态</string>
</resources>