<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/scene_org_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/scene_org_edit_label"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/scene_org_delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/scene_org_delete_label"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/scene_child_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/scene_child_add_label"
        android:textSize="18sp" />
</LinearLayout>